--- a/lesson05_MOPAC/homework.ipynb
+++ b/lesson05_MOPAC/homework.ipynb
@@ -9,63 +9,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7396453a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "786a53db",
+   "id": "21046c75",
    "metadata": {},
    "source": [
-    "-8.688 ev"
+    "# 問題2 \"PubChem_TCI_records.sdf\"の中にある分子のうち後ろから10個を選んでMOPAC2016で計算し、HOMOとLUMOの差が最も小さい分子を表示せよ。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e5d6279",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "問題2 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc0d434b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fe837a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "問題3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "438dc07b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41737f00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "問題4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de9e31db",
+   "id": "7081b58a",
    "metadata": {},
    "outputs": [],
    "source": []
