--- a/lesson04_RDKit/lecture_note_RDKit_no2_Descriptorsの使い方.ipynb
+++ b/lesson04_RDKit/lecture_note_RDKit_no2_Descriptorsの使い方.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "2e419bee",
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "61f44e2c",
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a26d1609",
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "3fe62c12",
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "87ee66e0",
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +113,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7212418",
    "metadata": {},
    "source": [
     "# 1つの分子に対してDescriptorで数字を表示する。"
@@ -116,6 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "8e2d8cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "4a658963",
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "ae0ff6e8",
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "96ec3c01",
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "1a60ffc9",
    "metadata": {},
    "outputs": [
     {
@@ -212,6 +223,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4af8788a",
    "metadata": {},
    "source": [
     "# 複数分子を読み込んだデータフレームにDescriptorを追加する。"
@@ -220,6 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "d865c842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "615ec1de",
    "metadata": {},
    "outputs": [
     {
@@ -285,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4d3fdef0",
    "metadata": {},
    "outputs": [
     {
@@ -351,6 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "12f58eb7",
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "359c8991",
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +431,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c7b0ccc",
    "metadata": {},
    "source": [
     "# 複数分子を読み込んだデータフレームにDescriptorを全て追加する。"
@@ -422,6 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "b46a8fb4",
    "metadata": {},
    "outputs": [
     {
@@ -441,6 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "14890912",
    "metadata": {},
    "outputs": [
     {
@@ -837,6 +857,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d7681fa",
    "metadata": {},
    "source": [
     "## morganfingerprintを表示"
@@ -845,6 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "11cc7d08",
    "metadata": {},
    "outputs": [
     {
@@ -877,6 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "478f2446",
    "metadata": {},
    "outputs": [
     {
@@ -1235,6 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "fb2ac697",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1452,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
