--- a/lesson06_scikit-learn/線形回帰_random_forest_fp.ipynb
+++ b/lesson06_scikit-learn/線形回帰_random_forest_fp.ipynb
@@ -24,7 +24,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "Xt-HHlPd7GdX"
+    "id": "Xt-HHlPd7GdX",
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "# ライブラリーの読み込みとバージョンの確認"
@@ -220,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# データの読み込みと加工 (finger printの作成)"
+    "# データの加工 (finger printの作成)"
    ]
   },
   {
@@ -750,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2685,6 +2690,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "colab": {
    "authorship_tag": "ABX9TyPrFIVXokIpXitoc79llY8A",
    "collapsed_sections": [],
