--- a/lesson05_MOPAC/homework_answer.ipynb
+++ b/lesson05_MOPAC/homework_answer.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab08ce063bd149e592929f8fa0e43d5b",
+       "model_id": "de6c71f6615b4c1985ecd30cd279bc96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cc1cc(O)c(C)c2c1OC(C)(CCCC(C)CCCC(C)CCCC(C)C)CC2\n",
+      "CN1C2CC(OC(=O)C(CO)c3ccccc3)CC1C(O)C2\n",
+      "CC(C)(C)c1cc(CN2CCN(CC(O)c3ccc(Cl)cc3)CC2)cc(C(C)(C)C)c1O\n",
       "CC(C)=CCC/C(C)=C/CC/C(C)=C/CCC1(C)CCc2cc(O)ccc2O1\n",
+      "CC(=O)NC(CSSCC(N)C(=O)O)C(=O)O\n",
+      "O=C1OC(C(O)CO)C(O)=C1O\n",
+      "O=C1OC(C(O)CO)C(O)=C1O\n",
+      "O=C1OC(C2COC(c3ccccc3)O2)C(O)=C1O\n",
+      "O=c1[nH]cnc2[nH]ncc12\n",
       "N/C(=N\\O)c1cc(O)c(O)c(O)c1\n"
      ]
     }
@@ -136,17 +144,17 @@
     "            \n",
     "            energy.append((mmff.CalcEnergy(), cid))\n",
     "\n",
-    "            energy.sort()\n",
-    "            conf = mol.GetConformer(energy[0][1])\n",
+    "        energy.sort()\n",
+    "        conf = mol.GetConformer(energy[0][1])\n",
     "\n",
     "            #ファイルを作成\n",
-    "            with open(folder_name + smiles+'.dat', 'w') as f: \n",
-    "                print('PM7 EF PRECISE GNORM=0.05 NOINTER GRAPHF VECTORS MMOK', file=f)\n",
-    "                print(smiles, file=f)\n",
-    "                print('Good Luck!', file=f)\n",
-    "                for n,(x,y,z) in enumerate(conf.GetPositions()):\n",
-    "                    atom = mol.GetAtomWithIdx(n)\n",
-    "                    print('{}  {:.6f} 1 {:.6f} 1 {:.6f} 1'.format(atom.GetSymbol(),x,y,z), file=f)\n",
+    "        with open(folder_name + smiles+'.dat', 'w') as f: \n",
+    "            print('PM7 EF PRECISE GNORM=0.05 NOINTER GRAPHF VECTORS MMOK', file=f)\n",
+    "            print(smiles, file=f)\n",
+    "            print('Good Luck!', file=f)\n",
+    "            for n,(x,y,z) in enumerate(conf.GetPositions()):\n",
+    "                atom = mol.GetAtomWithIdx(n)\n",
+    "                print('{}  {:.6f} 1 {:.6f} 1 {:.6f} 1'.format(atom.GetSymbol(),x,y,z), file=f)\n",
     "           \n",
     "    except:\n",
     "        print(smiles)\n",
