--- a/lesson05_MOPAC/mopac_windows.ipynb
+++ b/lesson05_MOPAC/mopac_windows.ipynb
@@ -13,7 +13,15 @@
    "execution_count": 1,
    "id": "3ce9446d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: C:\\Program Files\\MOPAC\\MOPAC2016.exe\r\n"
+     ]
+    }
+   ],
    "source": [
     "!\"C:\\Program Files\\MOPAC\\MOPAC2016.exe\" C:\\winmos10\\UserData\\phenol.dat"
    ]
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ec82fe7d",
    "metadata": {},
    "outputs": [],
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "65754bee",
    "metadata": {},
    "outputs": [],
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "49f1bd4e",
    "metadata": {},
    "outputs": [],
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "dac60c19",
    "metadata": {},
    "outputs": [],
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "86f3f977",
    "metadata": {},
    "outputs": [
@@ -132,7 +140,7 @@
        "Name: ROMol, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "d7e1e789",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bc3bb48e90c4e94b1a9f8d090448c26",
+       "model_id": "45175cc744054388ad5b223c1a3eb1c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -170,7 +178,6 @@
     "lfc = MolStandardize.fragment.LargestFragmentChooser()\n",
     "\n",
     "for mol in tqdm(mols[:10]):\n",
-    "    try:\n",
     "        #一番大きなフラグメントを選ぶ\n",
     "        mol = lfc.choose(mol)\n",
     "        #molファイルをsmilesにする\n",
@@ -181,21 +188,18 @@
     "        mol = Chem.AddHs(mol)\n",
     "        #3次元構造の生成\n",
     "        AllChem.EmbedMolecule(mol)\n",
-    "        #\n",
     "        cids = AllChem.EmbedMultipleConfs(mol, numConfs=1000, randomSeed=1234,\n",
     "                                           pruneRmsThresh=2, numThreads=0)\n",
     "        for cid in cids:\n",
     "            prop = AllChem.MMFFGetMoleculeProperties(mol)\n",
     "            mmff = AllChem.MMFFGetMoleculeForceField(mol, prop, confId=cid)\n",
     "            mmff.Minimize()\n",
-    "            \n",
     "            energy.append((mmff.CalcEnergy(), cid))\n",
-    "\n",
     "        energy.sort()\n",
     "        conf = mol.GetConformer(energy[0][1])\n",
     "\n",
     "        #ファイルを作成\n",
-    "        with open(folder_name + smiles+'.dat', 'w') as f: \n",
+    "        with open(smiles+'.dat', 'w') as f: \n",
     "            print('PM7 EF PRECISE GNORM=0.05 NOINTER GRAPHF VECTORS MMOK', file=f)\n",
     "            print(smiles, file=f)\n",
     "            print('Good Luck!', file=f)\n",
@@ -203,9 +207,9 @@
     "                atom = mol.GetAtomWithIdx(n)\n",
     "                print('{}  {:.6f} 1 {:.6f} 1 {:.6f} 1'.format(atom.GetSymbol(),x,y,z), file=f)\n",
     "           \n",
-    "    except:\n",
-    "        print(smiles)\n",
-    "        errorlist.append(smiles)"
+    "#     except:\n",
+    "#         print(smiles)\n",
+    "#         errorlist.append(smiles)"
    ]
   },
   {
