--- a/lesson02_jupyter/lecture_note.ipynb
+++ b/lesson02_jupyter/lecture_note.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ee5fc9c1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f9f02832",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "880e38ba",
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "173693f5",
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "8e0bb72a",
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5315bb90",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -102,6 +108,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c7fdf38",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -125,6 +132,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08f0121b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -144,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccabb774",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -163,6 +172,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef5f3cb5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -174,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee6a5db1",
    "metadata": {},
    "source": [
     "元のデータ\n",
@@ -187,6 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "cc0fc5a0",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -199,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e1952d7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -211,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6571d30e",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -311,6 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "683354b6",
    "metadata": {},
    "outputs": [
     {
@@ -404,6 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "16c3437b",
    "metadata": {},
    "outputs": [
     {
@@ -497,6 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "80cc587e",
    "metadata": {},
    "outputs": [
     {
@@ -666,6 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "6c9f7a6d",
    "metadata": {},
    "outputs": [
     {
@@ -685,6 +703,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e194f0e5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -697,6 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "f82ef7e5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -739,6 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "8aaf37e4",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -763,6 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "2064e91c",
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "97a0f00c",
    "metadata": {},
    "outputs": [
     {
@@ -805,6 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "6ee90d09",
    "metadata": {},
    "outputs": [
     {
@@ -825,6 +849,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9ad720c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -837,6 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "52d730d5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -865,6 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "ff8c4f9b",
    "metadata": {},
    "outputs": [
     {
@@ -932,6 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "8d378e5b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -946,6 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "b7de40e0",
    "metadata": {},
    "outputs": [
     {
@@ -1011,6 +1040,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25bd3a3a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1023,6 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "7662d2c7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1037,6 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "17097eb7",
    "metadata": {},
    "outputs": [
     {
@@ -1063,6 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "e0413e8d",
    "metadata": {},
    "outputs": [
     {
@@ -1083,6 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "3bf72283",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1103,6 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "f6a5f528",
    "metadata": {},
    "outputs": [
     {
@@ -1346,6 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "d50da586",
    "metadata": {},
    "outputs": [
     {
@@ -1367,6 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "b103e3ae",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1391,6 +1428,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acc892d7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1403,6 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "1d276724",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1439,6 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "d0cdb023",
    "metadata": {},
    "outputs": [
     {
@@ -1470,6 +1510,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ac6ab97",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1482,6 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "718eed67",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1503,6 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "9ece0603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,6 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "e8b64a1d",
    "metadata": {},
    "outputs": [
     {
@@ -1529,6 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "dbb12b58",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1542,6 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "b990ac85",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1562,6 +1608,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d220416",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1575,7 +1622,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1589,7 +1636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
