データベースの登録

--- a/lesson04_RDKit/lecture_note_RDKit_no1_分子の読み込みと表示と出力.ipynb
+++ b/lesson04_RDKit/lecture_note_RDKit_no1_分子の読み込みと表示と出力.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7d60a33d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -34,6 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ff807451",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -60,6 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3ab8d9b9",
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f201bdde",
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "be720dfc",
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "c6779304",
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5092ed4b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -152,6 +159,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b1ba10f",
    "metadata": {},
    "source": [
     "## rdkit.Chem.MolFromSmiles(smiles)"
@@ -160,6 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "2683bf2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "a8908612",
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6eafef01",
    "metadata": {},
    "outputs": [
     {
@@ -212,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d829884d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -236,6 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "0856a7d8",
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +274,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e12f4b12",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -273,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "8477bcff",
    "metadata": {},
    "outputs": [
     {
@@ -483,6 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "251c6323",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -507,6 +523,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4d9f381",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -519,6 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "b025b0fd",
    "metadata": {},
    "outputs": [
     {
@@ -540,6 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "5fc1aa76",
    "metadata": {},
    "outputs": [
     {
@@ -561,6 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "d58405bc",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -611,6 +631,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53f30796",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -623,6 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "ce73222e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "d5433ee0",
    "metadata": {},
    "outputs": [
     {
@@ -652,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "2eff90ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,6 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "85aaf7ac",
    "metadata": {},
    "outputs": [
     {
@@ -682,6 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "e1942af0",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -715,6 +741,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2ea03d5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -727,6 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "ca102cab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,6 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "1a178b0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,6 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "a8f1792f",
    "metadata": {},
    "outputs": [
     {
@@ -853,6 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "4deecc37",
    "metadata": {},
    "outputs": [
     {
@@ -881,6 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "f4d3566a",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -939,6 +971,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fdf6ae39",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -951,6 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "2e8f02f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,6 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "f13a7be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,6 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "52cdf802",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1059,6 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "9155957f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1073,6 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "54adc956",
    "metadata": {},
    "outputs": [
     {
@@ -1139,6 +1177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0fc54151",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1151,6 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "f5fa7158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,6 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "61a447ff",
    "metadata": {},
    "outputs": [
     {
@@ -1229,6 +1270,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28f4ce80",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1241,6 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "f5ce8942",
    "metadata": {},
    "outputs": [
     {
@@ -1314,6 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "2da9750e",
    "metadata": {},
    "outputs": [
     {
@@ -1338,6 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "4f1aceed",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1351,6 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "d0269837",
    "metadata": {},
    "outputs": [
     {
@@ -1376,6 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "d25a4532",
    "metadata": {},
    "outputs": [
     {
@@ -1447,6 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "ddc14279",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1460,6 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "bf04fc33",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1534,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1499,7 +1548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
