--- a/lesson01_install/lecture_note1.ipynb
+++ b/lesson01_install/lecture_note1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90a013a",
+   "id": "9ad47162",
    "metadata": {},
    "source": [
     "# google colabへのリンク"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76698a15",
+   "id": "41b398ff",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/chemoinformatics-lecture/lecture-beginner/blob/main/lesson01_install/lecture_note1.ipynb)"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe60631",
+   "id": "e4532b2c",
    "metadata": {},
    "source": [
     "# ライブラリーのインストール"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e866fd5",
+   "id": "6368e5aa",
    "metadata": {},
    "source": [
     "先頭に!をつけて行う。"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0f8970",
+   "id": "7475b6f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d13eca",
+   "id": "7fdfe939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c conda-forge rdkit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b1a6316",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdkit import Chem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b66837d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = Chem.MolFromSmiles('Cc1ccccc1')\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a6623dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +95,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c38609f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pubchempy as pcp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b4d9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = pcp.get_compounds('alanine', 'name')\n",
+    "aa"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a530ec60",
+   "id": "e6366bd7",
    "metadata": {},
    "source": [
     "# ファイルのアップロード"
@@ -81,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e646fd",
+   "id": "92bdfbd9",
    "metadata": {},
    "source": [
     "# ファイルのダウンロード"
@@ -90,14 +142,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fbc69e4",
+   "id": "65876c82",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3960316f",
+   "id": "5f4220c6",
    "metadata": {},
    "source": [
     "# google driveへの保存方法"
@@ -106,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64164587",
+   "id": "99b87d7d",
    "metadata": {},
    "outputs": [],
    "source": []
